--- a/loop-classify/CMakeLists.txt
+++ b/loop-classify/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_clang_executable(loop-classify
     LoopClassify.cpp
+    PseudoConstantAnalysis.cpp
   )
 target_link_libraries(loop-classify
   clangEdit clangTooling clangBasic clangAST clangASTMatchers)
