--- a/sloopy/CMakeLists.txt
+++ b/sloopy/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(LLVM_REQUIRES_EH 1)
 add_clang_executable(sloopy
-    LoopClassify.cpp
+    Sloopy.cpp
     PseudoConstantAnalysis.cpp
   )
 target_link_libraries(sloopy
