--- a/sloopy/CMakeLists.txt
+++ b/sloopy/CMakeLists.txt
@@ -1,7 +1,3 @@
 set(LLVM_REQUIRES_EH 1)
-add_clang_executable(sloopy
-    Sloopy.cpp
-    PseudoConstantAnalysis.cpp
-  )
-target_link_libraries(sloopy
-  clangEdit clangTooling clangBasic clangAST clangASTMatchers)
+add_clang_executable(sloopy Sloopy.cpp)
+target_link_libraries(sloopy clangTooling)
