syntactic term proving (some)

--- a/sloopy/CMakeLists.txt
+++ b/sloopy/CMakeLists.txt
@@ -2,4 +2,4 @@ FIND_PACKAGE( Boost 1.40 COMPONENTS system REQUIRED )
 INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
 SET(LLVM_REQUIRES_EH 1)
 ADD_CLANG_EXECUTABLE(sloopy Sloopy.cpp)
-TARGET_LINK_LIBRARIES(sloopy clangTooling ${Boost_LIBRARIES} )
+TARGET_LINK_LIBRARIES(sloopy clangTooling ${Boost_LIBRARIES} z3)
