--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ cscope.out
 # Directories to ignore (do not add trailing '/'s, they skip symlinks).
 #==============================================================================#
 docs/_build
+test*.c
+tags
